--- a/home/home.html
+++ b/home/home.html
@@ -46,9 +46,9 @@
   </style>
 </head>
 <body>
-  <title>2Doodle</title>
-  <label id="label">2Doodle</label>
-  <button id="myButton" onclick="fadeBackground()">Draw! 👉</button>
+  <title>Home</title>
+  <label id="label">Welcome!</label>
+  <button id="myButton" onclick="fadeBackground()">To the home screeeeeennnnnnnn!!!!!!</button>
   <button id="resetButton" onclick="resetBackground()" class="fade-in" style="display: none; position: absolute; top: 10px; left: 10px; background-color: #b5f6ff; color: black; font-size: 16px; padding: 10px 25px; border: none; border-radius: 20px; cursor: pointer; outline: none;" disabled>Back</button>
   <div id="myIframe" style="display: none;"></div>
   <script>
