--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>We&rsquo;ll be back soon!</h1>
         <div>
             <p>Sorry for the inconvenience, but we&rsquo;re performing some maintenance at the moment. We&rsquo;ll be back online shortly!</p>
-            <p>&mdash; The Team</p>
+            <p>&mdash; t4rrry</p>
         </div>
     </article>
 </body>
