--- a/home/welcome.html
+++ b/home/welcome.html
@@ -13,23 +13,28 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f4f4f4;
+            background-image: linear-gradient(135deg, #FFD700, #FFA07A);
+            color: #fff;
         }
         .container {
             text-align: center;
         }
         h1 {
             font-size: 3rem;
-            color: #333;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         p {
             font-size: 1.2rem;
-            color: #666;
+            color: #fff;
         }
         a {
             text-decoration: none;
-            color: #007bff;
+            color: #FF69B4;
             font-weight: bold;
+        }
+        a:hover {
+            color: #FF1493;
         }
     </style>
 </head>
