--- a/apps/notepad.html
+++ b/apps/notepad.html
@@ -7,13 +7,36 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            width: 80%;
+            max-width: 600px;
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #007bff;
+            text-align: center;
         }
         textarea {
-            width: 100%;
-            height: 400px;
+            width: calc(100% - 20px);
+            height: 300px;
             padding: 10px;
             box-sizing: border-box;
             margin-top: 20px;
+            border: 2px solid #007bff;
+            border-radius: 5px;
+            font-size: 16px;
+            outline: none;
         }
         button {
             padding: 10px 20px;
@@ -21,13 +44,22 @@
             color: #fff;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <h1>WebNot</h1>
-    <textarea id="notepad"></textarea>
-    <button onclick="saveNote()">Save</button>
+    <div class="container">
+        <h1>t4rrry's Notepad</h1>
+        <textarea id="notepad" placeholder="Write your note here..."></textarea>
+        <button onclick="saveNote()">Save</button>
+    </div>
 
     <script>
         function saveNote() {
