--- a/apps/notepad.html
+++ b/apps/notepad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>t4rrry's Notepad</title>
+    <title>WebNoted</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>t4rrry's Notepad</h1>
+        <h1>WebNoted</h1>
         <textarea id="notepad" placeholder="Write your note here..."></textarea>
         <button onclick="saveNote()">Save</button>
     </div>
