--- a/apps/notepad.html
+++ b/apps/notepad.html
@@ -57,7 +57,7 @@
 <body>
     <div class="container">
         <h1>WebNoted</h1>
-        <textarea id="notepad" placeholder="Write your note here..."></textarea>
+        <textarea id="notepad" placeholder="Write here..."></textarea>
         <button onclick="saveNote()">Save</button>
     </div>
 
