--- a/apps/whiteboard/main.html
+++ b/apps/whiteboard/main.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OnWhiteboard</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="utf-8" />
+<title>2Doodle</title>
+<script type="text/JavaScript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=1.4.2"></script>
 </head>
+<body>
+	<canvas id="myCanvas">
+		Sorry, your browser does not support HTML5 canvas technology.
+	</canvas>
+</body>
+</html>
 <body>
   <canvas id="whiteboard"></canvas>
   <script src="script.js"></script>
