Update and rename Index.txt.html to Index.html

--- a/apps/whiteboard/Index.html
+++ b/apps/whiteboard/Index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - HTML5 Canvas Whiteboard (Touch and Mouse)</title>
+  <title>2Doodle</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <head>
 <meta charset="utf-8" />
-<title>HTML5 Canvas Drawing Board</title>
+<title>2Doodle</title>
 <script type="text/JavaScript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=1.4.2"></script>
 </head>
 <body>
