--- a/apps/whiteboard/index.html
+++ b/apps/whiteboard/index.html
@@ -11,6 +11,7 @@
 <head>
 <meta charset="utf-8" />
 <title>2Doodle</title>
+<button class="HomeButton">Home</button>
 <script type="text/JavaScript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=1.4.2"></script>
 </head>
 <body>
