--- a/apps/whiteboard/index.html
+++ b/apps/whiteboard/index.html
@@ -14,7 +14,7 @@
 <script type="text/JavaScript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=1.4.2"></script>
 </head>
 <body>
-	<button class="HomeButton">Home</button>
+	<button class="HomeButton" href="https://tarry.github.io/home/welcome.html">Home</button>
 	<canvas id="myCanvas">
 		Sorry, your browser does not support HTML5 canvas technology.
 	</canvas>
