--- a/apps/whiteboard/index.html
+++ b/apps/whiteboard/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 	<a class="HomeButton" href="https://tarrry.github.io/home/welcome.html">Home</a>
+	<a class="ResetButton" href="https://tarrry.github.io/apps/whiteboard/index.html">Reset</a>
 	<canvas id="myCanvas">
 		Sorry, your browser does not support HTML5 canvas technology.
 	</canvas>
