--- a/home/welcome.html
+++ b/home/welcome.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: linear-gradient(135deg, #d45dd0, #a35ba1);
+            background-image: linear-gradient(135deg, #007bff, #a35ba1);
             color: #fff;
         }
         .container {
