--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
             <p>&mdash; t4rrry</p>
         </div>
     </article>
-<script  src="./script.js"></script>
+<script  src="script.js"></script>
 </body>
 </html>
