--- a/home/welcome.html
+++ b/home/welcome.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <h1>Welcome!</h1>
-        <p>This is where your <a href="https://tarrry.github.io">dreams</a> are destroyed.</p>
+        <p>This is where your <a href="https://tarrry.github.io/home/index.html">dreams</a> are destroyed.</p>
     </div>
 </body>
 </html>
