--- a/apps/whiteboard/index.html
+++ b/apps/whiteboard/index.html
@@ -14,7 +14,7 @@
 <script type="text/JavaScript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=1.4.2"></script>
 </head>
 <body>
-	<a class="HomeButton" href="https://tarrry.github.io/home/welcome.html">Home</a>
+	<a class="HomeButton" href="https://tarrry.github.io/home/index.html">Home</a>
 	<a class="ResetButton" href="https://tarrry.github.io/apps/whiteboard/index.html">Reset</a>
 	<canvas id="myCanvas">
 		Sorry, your browser does not support HTML5 canvas technology.
