--- a/apps/notepad.html
+++ b/apps/notepad.html
@@ -52,6 +52,22 @@
         button:hover {
             background-color: #0056b3;
         }
+
+        a {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+            text-decoration: none;
+        }
+        a:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +75,7 @@
         <h1>WebNoted</h1>
         <textarea id="notepad" placeholder="Write here..."></textarea>
         <button onclick="saveNote()">Save</button>
+        <a href="https://tarrry.github.io/home/index.html">Home</a>
     </div>
 
     <script>
