--- a/apps/PirateSites/Anime/index.html
+++ b/apps/PirateSites/Anime/index.html
@@ -6,6 +6,7 @@
     <title>T4rrry Ainme</title>
 </head>
 <body>
-<iframe id="anime" src="https://aniwatchtv.to" width="600" height="400" frameborder="0"></iframe>
+    <script src="script.js"></script>
+    <iframe id="anime" src="https://aniwatchtv.to" width="600" height="400" frameborder="0"></iframe>
 </body>
 </html>
