--- a/home/index.html
+++ b/home/index.html
@@ -6,13 +6,17 @@
 <title>Home Screen</title>
 <style>
 
+.h {
+  font-size:18px
+}
+  
 .scroll-left {
   height: 50px;	
   overflow: hidden;
   position: relative;
-  background: linear-gradient(to right, #ffec61, #ffab40); /* Fancy gradient background */
-  color: #ff7043; /* Orange text color */
-  border: 2px solid #ffab40; /* Orange border */
+  background: linear-gradient(to right, #a3299f, #d66fd3); /* Fancy gradient background */
+  color: #ffc4fd;
+  border: 2px solid #ff61fa;
   border-radius: 10px; /* Rounded corners */
 }
 
