--- a/home/index.html
+++ b/home/index.html
@@ -14,9 +14,9 @@
   height: 50px;	
   overflow: hidden;
   position: relative;
-  background: linear-gradient(to right, #a3299f, #d66fd3); /* Fancy gradient background */
-  color: #ffc4fd;
-  border: 2px solid #ff61fa;
+  background: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%); /* Fancy gradient background */
+  color: #ffffff;
+  border: 2px solid #ffffff;
   border-radius: 10px; /* Rounded corners */
 }
 
