--- a/home/index.html
+++ b/home/index.html
@@ -6,14 +6,20 @@
 <title>Home Screen</title>
 <style>
 
+.p {
+  font-family: "JetBrains Mono",monospace;
+}
+
 .h {
   font-size:18px
+  font-family: "JetBrains Mono",monospace;
 }
   
 .scroll-left {
   height: 50px;	
   overflow: hidden;
   position: relative;
+  font-family: "JetBrains Mono",monospace;
   background: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%); /* Fancy gradient background */
   color: #ffffff;
   border: 2px solid #ffffff;
